<resources>
    <string name="app_name">MyExamSpace</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_packages">Packages</string>
    <string name="myprofile">My Profile</string>
    <string name="trending">Trending Now</string>
    <string name="subjects">Subjects</string>

    <string name="leftnav_exams">Exams Categories</string>
    <string name="leftnav_subjects">Subjects</string>
    <string name="leftnav_caff">Current Affairs Articles</string>
    <string name="leftnav_ca_eng">CA in English</string>
    <string name="leftnav_ca_tel">CA in Telugu</string>
    <string name="leftnav_ca_hin">CA in Hindi</string>
    <string name="leftnav_packages">Packages</string>
    <string name="leftnav_noti">Active Notifications</string>
    <string name="leftnav_academics">Academics</string>
    <string name="leftnav_trending">Trending</string>
    <string name="leftnav_logout">Logout</string>


    <!--<string name="banner_home_footer">ca-app-pub-2641372993528631/2575075265</string>-->
    <string name="banner_home_footer">ca-app-pub-3940256099942544~3347511713</string>


    <string name="home_subtext">Welcome to MyExamSpace, a smart place for aspirants to gather information on Competitive exams, General Knowledge and Day to day happenings around world which are important for any competitive exam in India. \n MyExamSpace is a unique platform to provide aspirants the necessary information regarding competitive exams and academic exams of all levels in India. Here you can find all the information on every competition exam right from its notification to end results. We provide details of notifications, syllabus, preparation strategies, analysis of previous questions and patterns, previous years question papers, model papers, mock tests, results, toppers interviews, many more. \n Stay tuned and get all the necessary information on your preferred exam.

</string>

    <string name="curlybracket">&#123;</string>
    <string name="rupeecurrency">&#8377;</string>

    <string name="upsc">UPSC</string>
    <string name="ssc">SSC</string>
    <string name="bank">BANK</string>
    <string name="insurance">INSURANCE</string>
    <string name="railway">RAILWAYS</string>
    <string name="entrance">ENTRANCE</string>
    <string name="eligibility">ELIGIBILITY</string>
    <string name="states">STATES</string>
    <string name="others">OTHERS</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_current_affairs">Current Affairs Articles</string>
    <string name="title_activity_exams">Exams Categories</string>
    <string name="title_activity_exams_description">ExamsDescription</string>
    <string name="CategoryList">Category List</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="cbse">CBSE</string>
    <string name="intermediate">Intermediate</string>
    <string name="icse">ICSE</string>
    <string name="tsboard">Telengana State Board</string>
    <string name="apstateboard">AP State Board</string>
    <string name="questions">Q\nu\ne\ns\nt\ni\no\nn\ns</string>
    <string name="submit">Submit</string>
    <string name="academics">Academics</string>
    <string name="exampaper">Exam Paper</string>
    <string name="login">Login</string>
    <string name="buy">Buy</string>
    <string name="register">Register</string>
    <string name="logo">LogiIcon</string>
    <string name="taketest">Take Test</string>
    <string name="leftnav_latstupdates">Latest Updates</string>
    <string name="leftnav_curraffquizz">Current Affairs Quiz</string>
    <string name="leftnav_educationquizz">Education  News</string>
    <string name="filter_instructions">Instructions To Select Above Filters</string>
    <string name="title_trending">Trending</string>
    <string name="filter">Category</string>
    <string name="markForReview">Mark for Review</string>


    <!-- facebook credientials-->
    <string name="facebook_app_id">167872083795883</string>
    <string name="fb_login_protocol_scheme">fb167872083795883</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">202cada2a0b8b1212e92e1f9b4f54880</string>


    <!-- Phone Inbuilt permissions-->
    <string name="yes">Yes</string>
    <string name="no_thanks">No Thanks</string>
    <string name="storage_permission">Storage Permission</string>

    <string name="write_storage_permission_message">Write External permission allows us  access to your media. Please allow in App Settings for additional functionality.</string>
    <string name="read_storage_permission_message">Read External permission allows us to read your media. Please allow in App Settings for additional functionality.</string>
    <string name="select_picture">Select Picture</string>
    <string name="title_account">Account</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_cain_english">CAInEnglishActivity</string>


</resources>
